# PhysTerm

./: CMakeLists.txt  Camera.cpp  Camera.h  TerminalManager.cpp  TerminalManager.h  constant.h  main.cpp
LibMath/: Triangle.cpp  Triangle.h  basicFunction.cpp  basicFunction.h  vec2.cpp  vec2.h
LibMath/Triangle/: Triangle2D.cpp  Triangle2D.h  Triangle3D.cpp  Triangle3D.h
LibMath/Vector/: vec2.cpp  vec2.h  vec3.cpp  vec3.h
Utilities/: Debug.cpp  Debug.h  utilites.cpp  utilities.h
